--- a/real-time-chat-client/package.json
+++ b/real-time-chat-client/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-phoenix-websocket": "^0.6.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.14",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11",
-    "react-router-dom": ">= 4.0.0"
+    "react-router-dom": ">= 4.0.0",
+    "react-scripts": "1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
